--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -64,3 +64,9 @@
     border: none;
     background-color: inherit;
 }
+
+.errorMessage{
+    color: red;
+    font-family: Inter,sans-serif;
+    text-align: center;
+}
